[project]
name = "my_project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chromadb==1.3.4",
    "langchain-community==0.4.1",
    "langchain-openai==1.0.1",
    "langchain-text-splitters==1.0.0",
    "python-dotenv==1.1.1",
    "sentence-transformers==5.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"